<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.23"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="23sp"
            android:textStyle="bold"
            />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">
            <TextView
                android:id="@+id/lbl_storage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/storage"
                android:textSize="20sp"
                android:fontFamily="sans-serif" />

            <Switch
                android:id="@+id/switch_storage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lbl_storage"
                android:checked="false"
                android:text="@string/storage_description"
                android:textColor="@color/white"
                android:theme="@style/SCBSwitch"
                android:textSize="15sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">
            <TextView
                android:id="@+id/lbl_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textSize="20sp"
                android:fontFamily="sans-serif" />

            <Switch
                android:id="@+id/switch_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lbl_location"
                android:checked="false"
                android:text="@string/location_description"
                android:textColor="@color/white"
                android:theme="@style/SCBSwitch"
                android:textSize="15sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">
            <TextView
                android:id="@+id/lbl_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/camera"
                android:textSize="20sp"
                android:fontFamily="sans-serif" />

            <Switch
                android:id="@+id/switch_camera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lbl_camera"
                android:checked="false"
                android:text="@string/camera_description"
                android:textColor="@color/white"
                android:theme="@style/SCBSwitch"
                android:textSize="15sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">
            <TextView
                android:id="@+id/lbl_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textSize="20sp"
                android:fontFamily="sans-serif" />

            <Switch
                android:id="@+id/switch_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lbl_phone"
                android:checked="false"
                android:text="@string/phone_description"
                android:textColor="@color/white"
                android:theme="@style/SCBSwitch"
                android:textSize="15sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">
            <TextView
                android:id="@+id/lbl_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact"
                android:textSize="20sp"
                android:fontFamily="sans-serif" />

            <Switch
                android:id="@+id/switch_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lbl_contact"
                android:checked="false"
                android:text="@string/contact_description"
                android:textColor="@color/white"
                android:theme="@style/SCBSwitch"
                android:textSize="15sp" />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.885">

        <TextView
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:layout_toStartOf="@+id/btn_continue"
            android:text="@string/cancel"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/btn_continue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="20dp"
            android:text="@string/continue_lbl"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>